[package]
name = "sanpshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = "0.4.35"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
